<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <!--
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    -->

    <!--
    <TextView android:text="@string/conchatumadre" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingBottom="10dp"
            >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dip" >

            <ImageView
                android:id="@+id/imageView11"
                android:text="@string/T11"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/soccer_ball_white_small"
                android:background="@drawable/grass_small"
                android:padding="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView12"
                android:text="@string/T12"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_white_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView13"
                android:text="@string/T13"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView14"
                android:text="@string/T14"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_purple_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView15"
                android:text="@string/T15"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_white_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView16"
                android:text="@string/T16"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dip" >

            <ImageView
                android:id="@+id/imageView21"
                android:text="@string/T21"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_blue_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView22"
                android:text="@string/T22"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_blue_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView23"
                android:text="@string/T23"
                android:src="@drawable/soccer_ball_purple_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView24"
                android:text="@string/T24"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_yellow_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView25"
                android:text="@string/T25"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView26"
                android:text="@string/T26"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dip" >

            <ImageView
                android:id="@+id/imageView31"
                android:text="@string/T31"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_yellow_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView32"
                android:text="@string/T32"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView33"
                android:text="@string/T33"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_white_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView34"
                android:text="@string/T34"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_blue_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView35"
                android:text="@string/T35"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView36"
                android:text="@string/T36"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_yellow_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dip" >

            <ImageView
                android:id="@+id/imageView41"
                android:text="@string/T41"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_white_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView42"
                android:text="@string/T42"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView43"
                android:text="@string/T43"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_purple_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView44"
                android:text="@string/T44"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_purple_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView45"
                android:text="@string/T45"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_white_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView46"
                android:text="@string/T46"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_blue_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dip" >

            <ImageView
                android:id="@+id/imageView51"
                android:text="@string/T25"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_yellow_small"
                android:background="@drawable/grass_small"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView52"
                android:text="@string/T52"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_blue_small"
                android:background="@drawable/grass_small_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/imageView53"
                android:text="@string/T53"
                android:layout_weight="1"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small"/>
            <ImageView
                android:id="@+id/imageView54"
                android:text="@string/T54"
                android:layout_weight="1"
                android:background="@drawable/grass_small_dark"
                android:src="@drawable/soccer_ball_white_small" />
            <ImageView
                android:id="@+id/imageView55"
                android:text="@string/T55"
                android:layout_weight="1"
                android:background="@drawable/grass_small"
                android:src="@drawable/soccer_ball_red_small"
                 />
            <ImageView
                android:id="@+id/imageView56"
                android:text="@string/T56"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/soccer_ball_red_small"
                android:background="@drawable/grass_small_dark" />
            </TableRow>
        </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/black">
        <ImageView
            android:id="@+id/m1"
            android:text="@string/T56"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player1"
            />
        <ImageView
            android:id="@+id/m2"
            android:text="@string/T56"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player1"
            />
        <ImageView
            android:id="@+id/m3"
            android:text="@string/T56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player_black"
            />
        <ImageView
            android:id="@+id/m4"
            android:text="@string/T56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player_purple"
            />
        <ImageView
            android:id="@+id/m5"
            android:text="@string/T56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player2_red"
            />
        <ImageView
            android:id="@+id/m6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/T56"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/player_yellow"
            />
        </LinearLayout>

    <TextView
        android:background="#aaaa0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_bar"
        android:gravity="center"
        android:id="@+id/e_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:src="@drawable/soccer_ball"/>

</LinearLayout>
